kubernetes/db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wp-app-postgres
  namespace: wp
spec:
  serviceName: wp-app-postgres-service
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
        namespace: wp
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: wp-app-postgres-data
              mountPath: /var/lib/postgres/data
      volumes:
        - name: wp-app-postgres-data
          persistentVolumeClaim:
            claimName: wp-app-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: wp-app-postgres-service
  namespace: wp
spec:
  type: NodePort
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
