kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-app-ingress
  namespace: wp
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
#    nginx.ingress.kubernetes.io/affinity: "cookie"
#    nginx.ingress.kubernetes.io/session-cookie-name: "JSESSIONID"
#    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
#    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
#    nginx.ingress.kubernetes.io/session-cookie-path: /ingress-test
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wp-app-service
                port:
                  number: 8080
